--- a/src/main/resources/templates/basket/addForm.html
+++ b/src/main/resources/templates/basket/addForm.html
@@ -47,7 +47,7 @@
                 <div class="col">
                     <button class="w-100 btn btn-secondary btn-lg"
                             onclick="location.href='itemList.html'"
-                            th:onclick="|location.href='@{/chanMarket/board/{boardId}(boardId=${item.board.id})}'|"
+                            th:onclick="|location.href='@{/chanMarket/board/{boardId}(boardId=${board.id})}'|"
                             type="button">취소</button>
                 </div>
 
