--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -65,7 +65,7 @@
             <form class="d-flex">
                 <button class="btn btn-outline-dark"
                         th:if="${session.loginMember != null || session.googleLogin != null}"
-                        th:onclick="|location.href='@{/chanMarket/item/add}'|" type="button">
+                        th:onclick="|location.href='@{/chanMarket/board/add}'|" type="button">
                     <i class="bi-cart-fill me-1"></i>
                     Sell Item
                 </button>
@@ -97,10 +97,10 @@
                                 <!-- Product name-->
                                 <h5 class="fw-bolder">
                                     <td><a th:href="@{|/chanMarket/board/${board.id}|}"
-                                           th:text="${board.getItem().getItemName()}"></a></td>
+                                           th:text="${board.getTitle()}"></a></td>
                                 </h5>
                                 <!-- Product price-->
-                                <td th:text="${board.getItem().getPrice()}"></td>
+                                <td th:text="${board.getPrice()}"></td>
                             </div>
                         </div>
                         <!-- Product actions-->
