--- a/src/main/resources/templates/board/editForm.html
+++ b/src/main/resources/templates/board/editForm.html
@@ -62,7 +62,7 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <form th:action="@{'/chanMarket/board/' + ${boardId} + '/edit'}" th:method="put">
+            <form th:action="@{'/chanMarket/board/' + ${boardId} + '/edit'}" th:method="put" id="update_Form">
                 <div>
                     <label for="member">판매자</label>
                     <input type="text" id="member" name="member" class="form-control" value="1"
@@ -97,7 +97,7 @@
                 </div>
                 <br>
                 <div>
-                    <button class="w-100 btn btn-secondary btn-lg" type="submit" value="Update">저장
+                    <button class="w-100 btn btn-secondary btn-lg" type="submit" value="Update" id="update">저장
                     <button class="w-100 btn btn-primary btn-lg" th:onclick="|location.href='@{/chanMarket/board/{boardId}(boardId=${board.id})}'|" type="button">취소</button>
                 </div>
 
@@ -112,6 +112,7 @@
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
-<script src="/js/scripts.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/js/valid.js"></script>
 </body>
 </html>
