Refactor : 이미지 업로드 로컬 파일로 변경

--- a/src/main/resources/templates/board/boardInfo.html
+++ b/src/main/resources/templates/board/boardInfo.html
@@ -84,7 +84,7 @@
 </header>
 <!-- Section-->
 <div>
-    <img class="card-img-top" th:src="@{${board.filepath}}" alt="NotImage" style="margin-left: 700px; height: 400px; width: 500px;"/>
+    <img class="card-img-top" th:src="@{'/image/'+${board.id}}" alt="NotImage" style="margin-left: 700px; height: 400px; width: 500px;"/>
 </div>
 
 <section class="py-5">
