--- a/src/main/resources/templates/basket/addForm.html
+++ b/src/main/resources/templates/basket/addForm.html
@@ -14,7 +14,7 @@
         <h2>상품 상세</h2>
     </div>
     <!-- 추가 -->
-    <form th:action="@{'/chanMarket/basket/' + ${item.id} + '/add'}" th:method="post">
+    <form th:action="@{'/chanMarket/basket/' + ${board.id} + '/add'}" th:method="post">
         <div>
             <label for="email">판매자</label>
             <input type="text" id="email" name="email" class="form-control"
@@ -23,17 +23,17 @@
         <div>
             <label for="itemName">상품명</label>
             <input type="text" id="itemName" name="itemName" class="form-control"
-                   value="상품A" th:value="${item.itemName}" readonly>
+                   value="상품A" th:value="${board.title}" readonly>
         </div>
         <div>
             <label for="price">가격</label>
             <input type="text" id="price" name="price" class="form-control"
-                   value="10000" th:value="${item.price}" readonly>
+                   value="10000" th:value="${board.price}" readonly>
         </div>
         <div>
             <label for="itemInformation">제품 설명</label>
             <input type="text" id="itemInformation" name="itemInformation" class="form-control"
-                   value="10" th:value="${item.itemInformation}" readonly>
+                   value="10" th:value="${board.itemInformation}" readonly>
             <hr class="my-4">
             <div class="row">
 
@@ -46,7 +46,6 @@
 
                 <div class="col">
                     <button class="w-100 btn btn-secondary btn-lg"
-                            onclick="location.href='itemList.html'"
                             th:onclick="|location.href='@{/chanMarket/board/{boardId}(boardId=${board.id})}'|"
                             type="button">취소</button>
                 </div>
