--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -108,7 +108,7 @@
                 <div class="col mb-5 chan1">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" th:src="@{${board.filepath}}" alt="NotImage" style="height: 185px; width: 269px;"/>
+                        <img class="card-img-top" th:src="@{'/image/'+${board.id}}" alt="NotImage" style="height: 185px; width: 269px;"/>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
